[package]
name = "bevy_tdd_book_show_2d_coordinat_systems"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
